--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "classnames": "^2.5.1",
     "formik": "^2.4.6",
     "formik-antd": "^2.0.5",
     "json-server": "^1.0.0-beta.3",
